scripts/mongo-db/dashboard-ingress.yaml
# Error
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - backend: 
          serviceName: ingress-nginx
          servicePort: 80
        pathType: Prefix
